--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             feature is to provide advisory services individual struggles with</p>
         </div>
         <div class="col-md-5 w-95">
-            <img src="images/side view of man sitting in front of laptop and talking on phone.png" alt="" style="height: 456px;">
+            <img src="images/side view of man sitting in front of laptop and talking on phone.png" alt="" class="img-fluid" style="height: 456px;">
         </div>
       </div>
     </div>
@@ -133,7 +133,7 @@
                   type="email"
                   class="form-control w-75" name="formId1" id="formId1" placeholder="">
                 <label for="formId1">enter your email</label>
-                <button type="button" class="btn btn-primary " style="background-color: #379f18">Subscribe</button>
+                <button type="button" class="btn " style="background-color: #379f18">Subscribe</button>
               </div>
       
         </form>
