--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body style=" background-color: rgb(235, 232, 232);">
     <nav class="navbar navbar-expand-sm my-4" style="font-size: 24px">
         <div class="container d-flex align-items-center justify-content-evenly">
           <ul class="navbar-nav">
@@ -26,7 +26,7 @@
           </button>
           <ul class="navbar-nav ms-5 collapse navbar-collapse" id="collapsibleNavbar">
             <li class="nav-item ">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item me-4">
               <a class="nav-link" href="index.html">About us</a>
@@ -60,13 +60,13 @@
         </div>
     </nav>
 
-    <div class="container-fluid w-50 justify-content-center shadow border rounded-4 pb-5 mb-5">
+    <div class="container-fluid w-50 justify-content-center shadow border rounded-4 pb-5 mb-5" style="background-color: rgb(252, 248, 248);">
         <div class="container m-4">
             <div class="d-flex flex-wrap">
                 <p class="fs-4 me-5">
                     Join the Agro consultant <br>community team of expert
                 </p>
-                <div class="fs-5 ms-5 text-center">
+                <div class="fs-5 ms-1 text-center">
                     <p>
                         or  Continue with
                       </p>
