--- a/services.html
+++ b/services.html
@@ -28,13 +28,13 @@
           </button>
           <ul class="navbar-nav ms-5 collapse navbar-collapse" id="collapsibleNavbar">
             <li class="nav-item ">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item me-4">
               <a class="nav-link" href="index.html">About us</a>
             </li>
             <li class="nav-item me-4">
-              <a class="nav-link" href="#">Service</a>
+              <a class="nav-link active" href="#">Service</a>
             </li>
             <li class="nav-item me-4">
               <a class="nav-link" href="#contact">Contact us</a>
@@ -168,7 +168,7 @@ Agricultural science graduate with an MBA in animal nutrition and over a decade 
         </p>
     </div>
     <div class="container-fluid mb-5" style="background-color: #D9F2D2;">
-        <div class="container-fluid d-flex justify-content-between">
+        <div class="container d-flex justify-content-between">
             <div class="container ">
                 <div class="shadow bg-light pt-3 ps-3 mt-5 ms-4 shadow-lg border-0 rounded-4 w-75">
                     <img src="images/Popular.png" class="img-fluid " alt="">
@@ -189,7 +189,7 @@ Agricultural science graduate with an MBA in animal nutrition and over a decade 
                         </p>
                     </div>
             </div>
-            <div class="container ms-5">
+            <div class="container ">
                     <div class="shadow bg-light pt-3 ps-3 mt-5 ms-4 shadow-lg border-0 rounded-4 w-75">
                         <img src="images/Popular.png" class="img-fluid " alt="">
                         <p class="px-5 pb-4 "><span style="color: #379F18;">Larrie veronica</span><br>
@@ -225,7 +225,7 @@ Agricultural science graduate with an MBA in animal nutrition and over a decade 
                   type="email"
                   class="form-control w-75" name="formId1" id="formId1" placeholder="">
                 <label for="formId1">enter your email</label>
-                <button type="button" class="btn btn-primary " style="background-color: #379f18">Subscribe</button>
+                <button type="button" class="btn " style="background-color: #379f18">Subscribe</button>
               </div>
       
         </form>
