--- a/login.html
+++ b/login.html
@@ -11,8 +11,8 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
-    <nav class="navbar navbar-expand-sm my-4" style="font-size: 24px">
+<body style="background-color: rgb(235, 232, 232);">
+    <nav class="navbar navbar-expand-sm my-4" style="font-size: 24px;">
         <div class="container d-flex align-items-center justify-content-evenly">
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -26,7 +26,7 @@
           </button>
           <ul class="navbar-nav ms-5 collapse navbar-collapse" id="collapsibleNavbar">
             <li class="nav-item ">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item me-4">
               <a class="nav-link" href="index.html">About us</a>
@@ -60,7 +60,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid w-50 justify-content-center shadow border rounded-4 pb-5 mb-5">
+    <div class="container-fluid w-50 justify-content-center shadow border rounded-4 pb-5 mb-5 " style="background-color: rgb(252, 248, 248);">
         <div class="container m-4">
             <h3 class="mt-5" style="color: #379F18;">
                 Welcome back Charles,<br>Log in
