--- a/register.html
+++ b/register.html
@@ -24,37 +24,35 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <ul class="navbar-nav ms-5 collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav ms-5 collapse navbar-collapse justify-content-evenly" id="collapsibleNavbar">
             <li class="nav-item ">
-              <a class="nav-link " href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item me-4">
+            <li class="nav-item ">
               <a class="nav-link" href="index.html">About us</a>
             </li>
-            <li class="nav-item me-4">
+            <li class="nav-item ">
               <a class="nav-link" href="services.html">Service</a>
             </li>
-            <li class="nav-item me-4">
+            <li class="nav-item ">
               <a class="nav-link" href="index.html">Contact us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Team</a>
             </li>
-          </ul>
-          <ul class="navbar-nav ">
             <li class="nav-item ">
               <a
                 name=""
                 id=""
                 class="btn btn-lg"
                 style="background-color: #379f18; color: antiquewhite"
-                href="#"
+                href="register.html"
                 role="button"
                 >Register</a
               >
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="login.html" style="color: #379f18">Login</a>
+              <a class="nav-link" href="#" style="color: #379f18">Login</a>
             </li>
           </ul>
         </div>
