--- a/login.html
+++ b/login.html
@@ -24,24 +24,22 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <ul class="navbar-nav ms-5 collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav ms-5 collapse navbar-collapse justify-content-evenly" id="collapsibleNavbar">
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item me-4">
+            <li class="nav-item ">
               <a class="nav-link" href="index.html">About us</a>
             </li>
-            <li class="nav-item me-4">
+            <li class="nav-item ">
               <a class="nav-link" href="services.html">Service</a>
             </li>
-            <li class="nav-item me-4">
+            <li class="nav-item ">
               <a class="nav-link" href="index.html">Contact us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Team</a>
             </li>
-          </ul>
-          <ul class="navbar-nav ">
             <li class="nav-item ">
               <a
                 name=""
@@ -57,13 +55,16 @@
               <a class="nav-link" href="#" style="color: #379f18">Login</a>
             </li>
           </ul>
+          <ul class="navbar-nav ">
+            
+          </ul>
         </div>
     </nav>
 
     <div class="container-fluid w-50 justify-content-center shadow border rounded-4 pb-5 mb-5 " style="background-color: rgb(252, 248, 248);">
         <div class="container m-4">
             <h3 class="mt-5" style="color: #379F18;">
-                Welcome back Charles,<br>Log in
+                Welcome,<br>Log in
             </h3>
             <form action="">
                 <div class="mb-3 fs-4 mt-5">
