--- a/login.html
+++ b/login.html
@@ -61,8 +61,8 @@
         </div>
     </nav>
 
-    <div class="container-fluid w-50 justify-content-center shadow border rounded-4 pb-5 mb-5 " style="background-color: rgb(252, 248, 248);">
-        <div class="container m-4">
+    <div class="container-sm w-75 justify-content-center shadow border rounded-4 pb-5 mb-5 " style="background-color: rgb(252, 248, 248);">
+        <div class="container-sm m-4">
             <h3 class="mt-5" style="color: #379F18;">
                 Welcome,<br>Log in
             </h3>
@@ -83,9 +83,9 @@
                           <label for="" class="form-check-label">Remember me</label>
                          </div> 
                          <div>
-                            <a href="#" class="me-5 text-decoration-none " style="color: #379F18;">Forget password?</a>
+                            <a href="#" class="ms-3  text-decoration-none " style="color: #379F18;">Forget password?</a>
                          </div>
-                         <div class="container w-50 mt-3 ">
+                         <div class="container-fluid w-50 mt-3 ">
                             <a name="" id="" class="btn btn-lg d-block" href="#" role="button" style="background-color: #379F18;color: antiquewhite;">Login In</a>
                           </div>
                           <div class="container text-center "><p>
