--- a/register.html
+++ b/register.html
@@ -46,25 +46,25 @@
                 id=""
                 class="btn btn-lg"
                 style="background-color: #379f18; color: antiquewhite"
-                href="register.html"
+                href="#"
                 role="button"
                 >Register</a
               >
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="#" style="color: #379f18">Login</a>
+              <a class="nav-link" href="login.html" style="color: #379f18">Login</a>
             </li>
           </ul>
         </div>
     </nav>
 
-    <div class="container-fluid w-50 justify-content-center shadow border rounded-4 pb-5 mb-5" style="background-color: rgb(252, 248, 248);">
-        <div class="container m-4">
-            <div class="d-flex flex-wrap">
-                <p class="fs-4 me-5">
+    <div class="container-sm w-75 justify-content-center shadow border rounded-4 pb-5 mb-5" style="background-color: rgb(252, 248, 248);">
+        <div class="container-sm m-4">
+            <div class="d-flex justify-content-between flex-wrap">
+                <p class="fs-4">
                     Join the Agro consultant <br>community team of expert
                 </p>
-                <div class="fs-5 ms-1 text-center">
+                <div class="fs-5 me-5 text-center">
                     <p>
                         or  Continue with
                       </p>
