--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+      @media (max-width:1000px) {
+        .navs li a{
+          font-size: 1rem;
+          margin-left: 0;
+          
+        }
+        .a{
+          display:none
+        }
+      }
+    </style>
   </head>
   <body class="me-0">
     <!-- navigation -->
-    <nav class="navbar navbar-expand-sm my-4" style="font-size: 24px">
+    <nav class="navbar navbar-expand-sm my-4" style="font-size: 1.5rem">
         <div class="container d-flex align-items-center justify-content-evenly">
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -25,7 +37,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <ul class="navbar-nav ms-5 collapse navbar-collapse justify-content-evenly" id="collapsibleNavbar">
+          <ul class="navbar-nav ms-1 collapse navbar-collapse justify-content-evenly navs" id="collapsibleNavbar">
             <li class="nav-item ">
               <a class="nav-link" href="#">Home</a>
             </li>
@@ -38,7 +50,7 @@
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Contact us</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item a">
               <a class="nav-link" href="services.html">Team</a>
             </li>
             <li class="nav-item ">
