--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
           display:none
         }
       }
+      @media (max-width:400px) {
+        .vvv{
+          font-size: 1rem;
+        }
+      }
     </style>
   </head>
   <body class="me-0">
@@ -76,12 +81,12 @@
     <div class="container my-5">
       <div class="row align-items-center">
         <div class="col-md-7 ">
-          <h1 class="display-4" style="font-family: 'Lato';
+          <h1 class="vvv" style="font-family: 'Lato';font-size: 3rem;font-weight:200;
          ">
             <strong>Learn from expert and make your <span style="color: #379f18">business</span> boom</strong> 
             
           </h1>
-          <p class="fs-2" style="font-family: lato;">
+          <p class="" style="font-family: lato;font-size: 2rem;">
             There is an urgent need to give support and advice to farmer
             prospect for field implementation of specific agricultural,
             horticultural,forestry, animal husbandry and every aspect in agri
