--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <strong>Learn from expert and make your <span style="color: #379f18">business</span> boom</strong> 
             
           </h1>
-          <p class="" style="font-family: lato;font-size: 2rem;">
+          <p class="fs-2" style="font-family: lato;">
             There is an urgent need to give support and advice to farmer
             prospect for field implementation of specific agricultural,
             horticultural,forestry, animal husbandry and every aspect in agri
